--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
 minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.61
-loader_version=0.11.7
+loader_version=0.11.3
+# check available versions on maven for the given minecraft version you are using
+carpet_core_version=1.4.44+v210714
+
 # Mod Properties
-mod_version=1.0-SNAPSHOT
-maven_group=com.punchster2.subtick
-archives_base_name=subtick
+mod_version = 1.4.0
+maven_group = subtick
+archives_base_name = subtick
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.40.1+1.17
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
+# fabric_version=0.3.0+build.187
