--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.61
-loader_version=0.11.3
+display_minecraft_version=1.18.x
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.1
+loader_version=0.12.12
+carpet_minecraft_version=1.18.2
 # check available versions on maven for the given minecraft version you are using
-carpet_core_version=1.4.44+v210714
+carpet_core_version=1.4.66+v220228
 
 # Mod Properties
-mod_version = 1.4.0
+mod_version = 1.5.0
 maven_group = subtick
 archives_base_name = subtick
 
