--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ carpet_minecraft_version=1.18.2
 carpet_core_version=1.4.66+v220228
 
 # Mod Properties
-mod_version = 2.0 beta
+mod_version = 2.0
 maven_group = subtick
 archives_base_name = subtick
 
